# eventyay-teamshifts

./: .gitignore  .install-hooks.sh  .update-locales.sh  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: style.yml  tests.yml
teamshifts/: admin.py  apps.py  forms.py  models.py  permissions.py  signals.py  tasks.py  urls.py  views.py
teamshifts/locale/de/LC_MESSAGES/: django.po
teamshifts/locale/de_Informal/LC_MESSAGES/: django.po
teamshifts/mail/: default_templates.py
teamshifts/migrations/: 0001_initial.py  0002_teammemberapplication_phone_attendance.py  0003_callforteammembers_show_on_menu.py  0004_cfm_configurable_default_fields.py  0005_teamshifts_email_queue.py  0006_teamshifts_email_queue.py  0006_teamshifts_email_template.py  0007_alter_callforteammembers_active_and_more.py  0007_remove_teamapplicationquestion_position.py  0007_teamshifts_email_template.py  0008_alter_callforteammembers_active_and_more.py  0008_shift_location_text_teamrole_color_and_more.py  0008_teammemberapplication_arrived_and_more.py  0009_remove_role_from_application.py  0009_remove_shift_capacity_remove_shift_role_and_more.py  0009_shift_location_text_and_more.py  0009_shift_location_text_teamrole_color_and_more.py  0010_dedupe_applications.py  0010_remove_role_from_application.py  0010_remove_role_from_question.py  0010_remove_shift_capacity_remove_shift_role_and_more.py  0011_remove_role_from_application.py  0011_remove_role_from_question.py  0012_remove_role_from_question.py  0012_teamrole_is_restricted.py
teamshifts/services/: email.py
teamshifts/static/teamshifts/: apply.js  cfm_settings.js  cfv_settings.js  dragsort.js  teamshifts.css
teamshifts/templates/teamshifts/: application_detail.html  applications.html  apply.html  apply_thanks.html  base.html  cfm_application_form.html  cfm_settings.html  cfv_settings.html  dashboard.html  email_template_edit.html  email_templates.html  location_delete.html  location_edit.html  locations.html  members.html  my_shifts.html  question_edit.html  roles.html  shift_create.html  shift_create_success.html  shift_delete.html  shift_edit.html  shifts.html
teamshifts/templates/teamshifts/emails/: compose.html  delete_confirmation.html  outbox_form.html  outbox_list.html  sent_list.html
tests/: conftest.py  test_email_lifecycle_transactions.py  test_email_service.py  test_email_tasks.py  test_main.py  test_my_shifts.py  test_roles.py  test_shift_create.py  test_shift_locations.py
