[project]
name = "eventyay-teamshifts"
dynamic = ["version"]
requires-python = ">=3.12"
description = "Team and shift management plugin for eventyay"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["Eventyay"]
authors = [
    {name = "FOSSASIA", email = "contact@fossasia.org"},
]
maintainers = [
    {name = "FOSSASIA", email = "contact@fossasia.org"},
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "ruff",
]
test = [
    "pytest",
    "pytest-django",
]

[dependency-groups]
dev = [
    "ruff",
]
test = [
    "pytest",
    "pytest-django",
]

[project.entry-points."pretix.plugin"]
teamshifts = "teamshifts"

[build-system]
requires = [
    "setuptools",
]

[project.urls]
homepage = "https://github.com/fossasia/eventyay-teamshifts"
repository = "https://github.com/fossasia/eventyay-teamshifts"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"teamshifts" = [
    "templates/**/*",
    "static/**/*",
    "locale/**/*",
]

[tool.setuptools.dynamic]
version = {attr = "teamshifts.__version__"}

[tool.setuptools.packages.find]
include = ["teamshifts*"]
namespaces = false

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["N802", "E402"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["teamshifts"]
known-third-party = ["eventyay"]
