[project]
name = "eventyay-teamshifts"
dynamic = ["version"]
requires-python = ">=3.12"
description = "Team and shift management plugin for eventyay"
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["Eventyay"]
authors = [
    {name = "FOSSASIA", email = "contact@fossasia.org"},
]
maintainers = [
    {name = "FOSSASIA", email = "contact@fossasia.org"},
]

dependencies = [
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
    "pytest-django>=4.12.0",
    "pytest-env>=1.6.0",
    "pytest-rerunfailures>=16.4",
]

[dependency-groups]
dev = [
    "ruff",
]

[project.entry-points."pretix.plugin"]
teamshifts = "teamshifts"

[build-system]
requires = [
    "setuptools",
]

[project.urls]
homepage = "https://github.com/fossasia/eventyay-teamshifts"
repository = "https://github.com/fossasia/eventyay-teamshifts"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"teamshifts" = [
    "templates/**/*",
    "static/**/*",
    "locale/**/*",
]

[tool.setuptools.dynamic]
version = {attr = "teamshifts.__version__"}

[tool.setuptools.packages.find]
include = ["teamshifts*"]
namespaces = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "eventyay.config.settings"
testpaths = ["tests"]

[tool.pytest_env]
EVY_RUNNING_ENVIRONMENT = "testing"
EVY_POSTGRES_HOST = "localhost"
EVY_POSTGRES_PORT = "5432"
EVY_POSTGRES_USER = "postgres"
EVY_POSTGRES_PASSWORD = "postgres"
EVY_POSTGRES_DB = "eventyay-db"

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["N802", "E402"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["teamshifts"]
known-third-party = ["eventyay"]
